--- a/HTML/quote.html
+++ b/HTML/quote.html
@@ -27,7 +27,20 @@
       <! -- Quote page -->
 
       <! -- Data entry -->
-
+      <form>
+        <label for="fullname">Full name:</label><br>
+        <input type="text" id="fullname" name="fullname"><br>
+        <label for="email">email</label><br>
+        <input type="text" id="email" name="email">
+        <label for="telephone">Telephone:</label><br>
+        <input type="text" id="telephone" name="telephone">
+        <label for="information">Request more information:</label>
+        <textarea id="information" name="information" rows="4" cols="1"
+        <input type="checkbox" id="privacypolicy1" name="privacypolicy1" value="Accept">
+        <label for="privacypolicy1">I accept the terms and privacy policy</label><br>
+        <input type="checkbox" id="privacypolicy2" name="privacypolicy2" value="decline">
+        <label for="privacypolicy2">I do not accept the terms and privacy policy</label><br>
+      </form>
       <! -- Privacy Policy -->
 
       <! -- Checkbox -->
