--- a/HTML/quote.html
+++ b/HTML/quote.html
@@ -29,16 +29,16 @@
       <! -- Data entry -->
       <form>
         <label for="fullname">Full name:</label>
-        <input type="text" id="fullname" name="fullname">
+        <input type="text" id="fullname" name="fullname"><br>
 
-        <label for="email">email</label>
-        <input type="email" id="email" name="email">
+        <label for="email">Email</label>
+        <input type="email" id="email" name="email"><br>
 
         <label for="telephone">Telephone:</label>
-        <input type="tel" id="telephone" name="telephone">
+        <input type="tel" id="telephone" name="telephone"><br>
 
         <label for="information">Request more information:</label>
-        <textarea id="information" name="information" rows="4" cols="1"</textarea>
+        <textarea id="information" name="information" rows="4" cols="10"></textarea><br>
 
         <input type="checkbox" id="privacypolicy" name="privacypolicy" value="accept" required>
         <label for="privacypolicy">I accept the terms and privacy policy</label>
