--- a/HTML/quote.html
+++ b/HTML/quote.html
@@ -30,20 +30,15 @@
       <form>
         <label for="fullname">Full name:</label>
         <input type="text" id="fullname" name="fullname"><br>
-
-        <label for="email">Email</label>
+        <label for="email">Email:</label>
         <input type="email" id="email" name="email"><br>
-
         <label for="telephone">Telephone:</label>
         <input type="tel" id="telephone" name="telephone"><br>
-
-        <label for="information">Request more information:</label>
-        <textarea id="information" name="information" rows="4" cols="10"></textarea><br>
-
+        <label for="information">Request more information:</label><br>
+        <textarea id="information" name="information" rows="5" cols="50"></textarea><br>
         <input type="checkbox" id="privacypolicy" name="privacypolicy" value="accept" required>
         <label for="privacypolicy">I accept the terms and privacy policy</label>
-
-        <button type="submit">Submit</button>
+        <button type="submit">Submit</button><br>
 
       </form>
       <! -- Privacy Policy -->
