--- a/HTML/quote.html
+++ b/HTML/quote.html
@@ -42,7 +42,7 @@
 
       </form>
       <! -- Privacy Policy -->
-      <p>Your privacy is important to us. Any information provided through our form, such as your name, email address, or other details, will only be used to process your request and provide you with an accurate quote. We will not share your information with third parties without your consent. All data is handled securely and in compliance with applicable privacy regulations. If you have any questions or concerns about how your information is used, feel free to contact us.</p>
+      <br><p>Your privacy is important to us. Any information provided through our form, such as your name, email address, or other details, will only be used to process your request and provide you with an accurate quote. We will not share your information with third parties without your consent. All data is handled securely and in compliance with applicable privacy regulations. If you have any questions or concerns about how your information is used, feel free to contact us.</p>
       <! -- Checkbox -->
     </main>
 
