--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -28,7 +28,7 @@
       <p>Welcome to Urban Lifestyle, where fashion meets the heartbeat of the city. Our collection captures the essence of modern streetwear; bold, trendy, and unapologetically authentic. From standout tees to sleek essentials, we design clothing that speaks to your vibe and empowers your style. Step into the urban flow and make your mark with Urban Lifestyle</p>
       <!-- Image Gallery -->
     <div class="clothes">
-      <header>Pants</header>
+      <h1>Pants</h1>
         <div class="pants">
           <img src="/MasterD-Website-Project-1/Images/pants1.jpg" alt="blue pants orange background">
           <div class="description">Hector style pants</div>
@@ -45,8 +45,8 @@
           <img src="/MasterD-Website-Project-1/Images/pants4.jpg" alt="pants with frills">
           <div class="description">Mayamo Frill Pants</div>
         </div>
-      <header>T-shirts</header>
 
+      <h1>T-shirts</h1>
         <div class="tshirts">
             <img src="/MasterD-Website-Project-1/Images/tshirt4.jpg" alt="black t shirt rock and roll">
             <div class="description">Matoni T-shirt custom sized</div>
@@ -66,7 +66,7 @@
           <div class="description">France T-shirt custom sized</div>
         </div>
 
-      <header>Shoes</header>
+      <h1>Shoes</h1>
       <div class="shoes">   
         <img src="/MasterD-Website-Project-1/Images/shoes1.jpg" alt="black converse on prosthethic legs">
         <div class="description">Converse</div>      
