add map contact

--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -27,6 +27,10 @@
         <h3><em>Premium Clothes</em></h3>
       </div>
       <! -- Map -->
+      <h1>How to find us</h1>
+        <div class="map">
+            <img src="/MasterD-Website-Project-1/Images/contact_urban.jpg" alt=",ap of store location">
+        </div>
     </main>
     <! -- Footer -->
       <div class="footer">
