correct photo map

--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -29,7 +29,7 @@
       <! -- Map -->
       <h1>How to find us</h1>
         <div class="map">
-            <img src="/MasterD-Website-Project-1/Images/contact_urban.jpg" alt=",ap of store location">
+            <img src="/MasterD-Website-Project-1/Images/map1.jpg" alt="map of store location">
         </div>
     </main>
     <! -- Footer -->
