--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -31,6 +31,21 @@
         <div class="map">
             <img src="/MasterD-Website-Project-1/Images/map1.jpg" alt="map of store location">
         </div>
+        <p><b>Company name:</b>></p><br>
+        <p>Urban Lifestyle S.L</p>
+        <p><b>CIF:</b></p><br>
+        <p>B444000224</p>
+        <p><b>Registered adress</b></p><br>
+        <p>Calle de Prim 6, 28004 Madrid, España</p>
+        <p><b>Contact information</b></p><br>
+        <ul>
+          <li>Telephone: 90950392</li>
+          <li>Email: contact@urbanlifestyle.com</li>
+        </ul>
+        <p><b>Business Activity:</b></p><br>
+        <p>Clothing sales</p>
+        <p><b>Legal Form:</b></p><br>
+        <p>Sociedad Limitada</p>
     </main>
     <! -- Footer -->
       <div class="footer">
