contact info edit

--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -29,23 +29,23 @@
       <! -- Map -->
       <h1>How to find us</h1>
         <div class="map">
-            <img src="/MasterD-Website-Project-1/Images/map1.jpg" alt="map of store location">
+            <img src="/MasterD-Website-Project-1/Images/map1.png" alt="map of store location">
         </div>
-        <p><b>Company name:</b>></p><br>
-        <p>Urban Lifestyle S.L</p>
-        <p><b>CIF:</b></p><br>
-        <p>B444000224</p>
-        <p><b>Registered adress</b></p><br>
-        <p>Calle de Prim 6, 28004 Madrid, España</p>
-        <p><b>Contact information</b></p><br>
+        <p><b>Company name:</b>></p>
+        <p>Urban Lifestyle S.L</p><br>
+        <p><b>CIF:</b></p>
+        <p>B444000224</p><br>
+        <p><b>Registered adress</b></p>
+        <p>Calle de Prim 6, 28004 Madrid, España</p><br>
+        <p><b>Contact information</b></p>
         <ul>
           <li>Telephone: 90950392</li>
           <li>Email: contact@urbanlifestyle.com</li>
-        </ul>
-        <p><b>Business Activity:</b></p><br>
-        <p>Clothing sales</p>
-        <p><b>Legal Form:</b></p><br>
-        <p>Sociedad Limitada</p>
+        </ul><br>
+        <p><b>Business Activity:</b></p>
+        <p>Clothing sales</p><br>
+        <p><b>Legal Form:</b></p>
+        <p>Sociedad Limitada</p><br>
     </main>
     <! -- Footer -->
       <div class="footer">
