--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -31,7 +31,7 @@
         <div class="map">
             <img src="/MasterD-Website-Project-1/Images/map1.png" alt="map of store location">
         </div>
-        <p><b>Company name:</b>></p>
+        <p><b>Company name:</b></p>
         <p>Urban Lifestyle S.L</p><br>
         <p><b>CIF:</b></p>
         <p>B444000224</p><br>
