index html validate round 1

--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width", initial-scale=1.0>
-    <link rel="stylesheet" href="CSS/styles.css" />
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width" initial-scale=1.0/>
+    <link rel="stylesheet" href="CSS/styles.css"/>
     <title>Urban Lifestyle</title>
   </head>
   <body>
-    <! -- Header -->
     <header>
-      <! -- Navigation Menu -->
+      <!--Navigation Menu-->
       <div class="navigation">
         <a class="active" href="/MasterD-Website-Project-1/index.html">Home</a>
         <a href="/MasterD-Website-Project-1/HTML/contact.html">Contact</a>
@@ -17,7 +16,6 @@
         <a href="/MasterD-Website-Project-1/HTML/quote.html">Quote</a>
       </div>
     </header>
-    <! -- Index Page -->
     <main class="main">
         <div class="mainheader">
         <h1>Urban Lifestyle</h1>
@@ -25,9 +23,9 @@
         </div>
       <p>Welcome to Urban Lifestyle Clothing, the home of the freshest apparel. We are all about bold designs, effortless comfort, and a vibe that speaks to the heart of the city. From everyday staples to standout pieces, our collections are designed to move with you. Explore the site, and find your next look that is as dynamic as you are.</p>
       
-      <! -- Contact Page -->
+      <!--Contact block-->
       <div class="categorypicture">
-      <img src="Images/contact_urban.jpg" alt="contact" />
+      <img src="Images/contact_urban.jpg" alt="contact"/>
       </div>
       <p>Have questions, or ready to start your next project? We would love to hear from you! Whether you need more information or are looking to collaborate, our team is here to help. Fill out the contact form, or reach out to us directly via email or phone. Let us create something amazing together.</p>
       <a href="HTML/contact.html" class="button">
@@ -35,45 +33,45 @@
       </a>
       
 
-      <! -- Portfolio Page -->
+      <!--Portfolio block-->
       <div class="categorypicture">
-      <img src="Images/portfolio_urban.jpg" alt="portfolio" />
+      <img src="Images/portfolio_urban.jpg" alt="portfolio"/>
       </div>
       <p>Explore our catalogue to see the heart of what we do. From the latest winter fashhions to christmas apparel, each product reflects our commitment to creativity and quality. </p>
       <a href="/MasterD-Website-Project-1/HTML/portfolio.html" class="button">
         <button type="button">Check out the catalogue</button>
       </a>
-      <! -- Quote page -->
+      <!--Quote block-->
       <div class="categorypicture">
-      <img src="Images/quote_urban.jpg" alt="quote" />
+      <img src="Images/quote_urban.jpg" alt="quote"/>
       </div>
       <p>Ready to bring your vision to life? Request a personalized quote tailored to your needs. Whether it is a t-shirt or a fifteen sweaters, we will provide you with a clear and competitive estimate. Simply fill out the form with your details, and we will get back to you promptly to discuss the next steps.</p>
       <a href="/MasterD-Website-Project-1/HTML/quote.html" class="button">
         <button type="button">Get a quote</button>
       </a>
     </main>
-    <! -- Footer -->
+    <!--Footer items-->
       <div class="footer">
       <! -- Adress and legal notice -->
       <p>Calle de Prim 6, 28004 Madrid, España</p>
       <p>&#169; 2025 Urban Lifestyle Clothes. All rights reserved</p>
       </div>
-       <! -- Social Networks -->
+       <!--Social Networks-->
       <div class="social">
         <a href="https://www.facebook.com">
-        <img src="Images/facebook_logo.png" alt="facebook logo" />
+        <img src="Images/facebook_logo.png" alt="facebook logo"/>
       </a>
       <a href="https://www.x.com">
-        <img src="Images/twitter_logo.png" alt="twitter logo" />
+        <img src="Images/twitter_logo.png" alt="twitter logo"/>
       </a>
       <a href="https://www.linkedin.com">
-        <img src="Images/linkedin_logo.png" alt="linkedin logo" />
+        <img src="Images/linkedin_logo.png" alt="linkedin logo"/>
       </a>
       </div>
-      <! -- Logo -->
+      <!--Footer Logo-->
       <div class="footerlogo">
       <a href="/MasterD-Website-Project-1/index.html"></a>
-      <img src="Images/urban_lifestyle_logo.png" alt="company logo" />
+      <img src="Images/urban_lifestyle_logo.png" alt="company logo"/>
       </a>
       </div>
     </footer>
