--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width" initial-scale=1.0/>
+    <meta name="viewport" content="width=device-width" initial-scale=1.0>
     <link rel="stylesheet" href="CSS/styles.css"/>
     <title>Urban Lifestyle</title>
   </head>
@@ -25,17 +25,15 @@
       
       <!--Contact block-->
       <div class="categorypicture">
-      <img src="Images/contact_urban.jpg" alt="contact"/>
+      <img src="Images/contact_urban.jpg" alt="contact">
       </div>
       <p>Have questions, or ready to start your next project? We would love to hear from you! Whether you need more information or are looking to collaborate, our team is here to help. Fill out the contact form, or reach out to us directly via email or phone. Let us create something amazing together.</p>
-      <a href="HTML/contact.html" class="button">
-        <button type="button">Contact us</button>
-      </a>
+      <a href="HTML/contact.html" class="button">Contact us</a>
       
 
       <!--Portfolio block-->
       <div class="categorypicture">
-      <img src="Images/portfolio_urban.jpg" alt="portfolio"/>
+      <img src="Images/portfolio_urban.jpg" alt="portfolio">
       </div>
       <p>Explore our catalogue to see the heart of what we do. From the latest winter fashhions to christmas apparel, each product reflects our commitment to creativity and quality. </p>
       <a href="/MasterD-Website-Project-1/HTML/portfolio.html" class="button">
@@ -43,7 +41,7 @@
       </a>
       <!--Quote block-->
       <div class="categorypicture">
-      <img src="Images/quote_urban.jpg" alt="quote"/>
+      <img src="Images/quote_urban.jpg" alt="quote">
       </div>
       <p>Ready to bring your vision to life? Request a personalized quote tailored to your needs. Whether it is a t-shirt or a fifteen sweaters, we will provide you with a clear and competitive estimate. Simply fill out the form with your details, and we will get back to you promptly to discuss the next steps.</p>
       <a href="/MasterD-Website-Project-1/HTML/quote.html" class="button">
@@ -59,19 +57,19 @@
        <!--Social Networks-->
       <div class="social">
         <a href="https://www.facebook.com">
-        <img src="Images/facebook_logo.png" alt="facebook logo"/>
+        <img src="Images/facebook_logo.png" alt="facebook logo">
       </a>
       <a href="https://www.x.com">
-        <img src="Images/twitter_logo.png" alt="twitter logo"/>
+        <img src="Images/twitter_logo.png" alt="twitter logo">
       </a>
       <a href="https://www.linkedin.com">
-        <img src="Images/linkedin_logo.png" alt="linkedin logo"/>
+        <img src="Images/linkedin_logo.png" alt="linkedin logo">
       </a>
       </div>
       <!--Footer Logo-->
       <div class="footerlogo">
       <a href="/MasterD-Website-Project-1/index.html"></a>
-      <img src="Images/urban_lifestyle_logo.png" alt="company logo"/>
+      <img src="Images/urban_lifestyle_logo.png" alt="company logo">
       </a>
       </div>
     </footer>
