--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="CSS/styles.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="CSS/styles.css">
     <title>Urban Lifestyle</title>
   </head>
   <body>
@@ -31,7 +31,7 @@
 
       <!--Contact block-->
       <div class="categorypicture">
-        <img src="Images/contact_urban.jpg" alt="contact" />
+        <img src="Images/contact_urban.jpg" alt="contact">
       </div>
       <p>
         Have questions, or ready to start your next project? We would love to
@@ -44,7 +44,7 @@
 
       <!--Portfolio block-->
       <div class="categorypicture">
-        <img src="Images/portfolio_urban.jpg" alt="portfolio" />
+        <img src="Images/portfolio_urban.jpg" alt="portfolio">
       </div>
       <p>
         Explore our catalogue to see the heart of what we do. From the latest
@@ -57,7 +57,7 @@
 
       <!--Quote block-->
       <div class="categorypicture">
-        <img src="Images/quote_urban.jpg" alt="quote" />
+        <img src="Images/quote_urban.jpg" alt="quote">
       </div>
       <p>
         Ready to bring your vision to life? Request a personalized quote
@@ -79,19 +79,19 @@
     <!--Social Networks-->
     <div class="social">
       <a href="https://www.facebook.com">
-        <img src="Images/facebook_logo.png" alt="facebook logo" />
+        <img src="Images/facebook_logo.png" alt="facebook logo">
       </a>
       <a href="https://www.x.com">
-        <img src="Images/twitter_logo.png" alt="twitter logo" />
+        <img src="Images/twitter_logo.png" alt="twitter logo">
       </a>
       <a href="https://www.linkedin.com">
-        <img src="Images/linkedin_logo.png" alt="linkedin logo" />
+        <img src="Images/linkedin_logo.png" alt="linkedin logo">
       </a>
     </div>
     <!--Footer Logo-->
     <div class="footerlogo">
       <a href="/MasterD-Website-Project-1/index.html"></a>
-      <img src="Images/urban_lifestyle_logo.png" alt="company logo" />
+      <img src="Images/urban_lifestyle_logo.png" alt="company logo">
     </div>
   </body>
 </html>
