--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" , initial-scale="1.0" />
-    <link rel="stylesheet" href="../CSS/styles.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../CSS/styles.css">
     <title>Urban Lifestyle</title>
   </head>
   <body>
-    <! -- Header -->
+    <!--Header-->
     <header>
       <! -- Navigation Menu -->
       <div class="navigation">
@@ -20,17 +20,18 @@
       </div>
     </header>
 
-    <! -- Contact Page -->
+    <!--Contact Page-->
     <main class="main">
       <div class="mainheader">
         <h1>Urban Lifestyle</h1>
         <h3><em>Premium Clothes</em></h3>
       </div>
-      <! -- Map -->
+      <!--Map-->
       <h1>How to find us</h1>
         <div class="map">
             <img src="/MasterD-Website-Project-1/Images/map1.png" alt="map of store location">
         </div>
+        <!--Company Details-->
         <p><b>Company name:</b></p>
         <p>Urban Lifestyle S.L</p><br>
         <p><b>CIF:</b></p>
@@ -47,30 +48,28 @@
         <p><b>Legal Form:</b></p>
         <p>Sociedad Limitada</p><br>
     </main>
-    <! -- Footer -->
+    <!--Footer-->
       <div class="footer">
-      <! -- Adress and legal notice -->
+      <!--Adress and legal notice-->
       <p>Calle de Prim 6, 28004 Madrid, España</p>
       <p>&#169; 2025 Urban Lifestyle Clothes. All rights reserved</p>
       </div>
-       <! -- Social Networks -->
+       <!--Social Networks-->
       <div class="social">
         <a href="https://www.facebook.com">
-        <img src="/MasterD-Website-Project-1/Images/facebook_logo.png" alt="facebook logo" />
+        <img src="/MasterD-Website-Project-1/Images/facebook_logo.png" alt="facebook logo">
       </a>
       <a href="https://www.x.com">
-        <img src="/MasterD-Website-Project-1/Images/twitter_logo.png" alt="twitter logo" />
+        <img src="/MasterD-Website-Project-1/Images/twitter_logo.png" alt="twitter logo">
       </a>
       <a href="https://www.linkedin.com">
-        <img src="/MasterD-Website-Project-1/Images/linkedin_logo.png" alt="linkedin logo" />
+        <img src="/MasterD-Website-Project-1/Images/linkedin_logo.png" alt="linkedin logo">
       </a>
       </div>
-      <! -- Logo -->
+      <!--Logo-->
       <div class="footerlogo">
       <a href="/MasterD-Website-Project-1/index.html"></a>
-      <img src="/MasterD-Website-Project-1/Images/urban_lifestyle_logo.png" alt="company logo" />
-      </a>
+      <img src="/MasterD-Website-Project-1/Images/urban_lifestyle_logo.png" alt="company logo">
       </div>
-    </footer>
   </body>
 </html>
