--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" , initial-scale="1.0" />
-    <link rel="stylesheet" href="../CSS/styles.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../CSS/styles.css">
     <title>Urban Lifestyle</title>
   </head>
   <body>
-    <! -- Header -->
+    <!--Header-->
     <header>
-      <! -- Navigation Menu -->
+      <!--Navigation Menu-->
       <div class="navigation">
         <a href="/MasterD-Website-Project-1/index.html">Home</a>
         <a href="/MasterD-Website-Project-1/HTML/contact.html">Contact</a>
@@ -19,14 +19,14 @@
         <a href="/MasterD-Website-Project-1/HTML/quote.html">Quote</a>
       </div>
     </header>
-    <! -- Portfolio Page -->
+    <!--Portfolio Page-->
     <main class="main">
     <div class="mainheader">
         <h1>Urban Lifestyle</h1>
         <h3><em>Premium Clothes</em></h3>
       </div>
       <p>Welcome to Urban Lifestyle, where fashion meets the heartbeat of the city. Our collection captures the essence of modern streetwear; bold, trendy, and unapologetically authentic. From standout tees to sleek essentials, we design clothing that speaks to your vibe and empowers your style. Step into the urban flow and make your mark with Urban Lifestyle</p>
-      <!-- Image Gallery -->
+      <!--Image Gallery-->
     <div class="clothes">
       <h1>Pants</h1>
         <div class="pants">
@@ -86,9 +86,9 @@
     </div>
     </main>
 
-    <! -- Footer -->
+    <!--Footer-->
       <div class="footer">
-      <! -- Adress and legal notice -->
+      <!--Adress and legal notice-->
       <p>Calle de Prim 6, 28004 Madrid, España</p>
       <p>&#169; 2025 Urban Lifestyle Clothes. All rights reserved</p>
       </div>
@@ -108,8 +108,6 @@
       <div class="footerlogo">
       <a href="/MasterD-Website-Project-1/index.html"></a>
       <img src="/MasterD-Website-Project-1/Images/urban_lifestyle_logo.png" alt="company logo" />
-      </a>
       </div>
-    </footer>
   </body>
 </html>
