--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -92,22 +92,22 @@
       <p>Calle de Prim 6, 28004 Madrid, España</p>
       <p>&#169; 2025 Urban Lifestyle Clothes. All rights reserved</p>
       </div>
-       <! -- Social Networks -->
+       <!--Social Networks-->
       <div class="social">
         <a href="https://www.facebook.com">
-        <img src="/MasterD-Website-Project-1/Images/facebook_logo.png" alt="facebook logo" />
+        <img src="/MasterD-Website-Project-1/Images/facebook_logo.png" alt="facebook logo">
       </a>
       <a href="https://www.x.com">
-        <img src="/MasterD-Website-Project-1/Images/twitter_logo.png" alt="twitter logo" />
+        <img src="/MasterD-Website-Project-1/Images/twitter_logo.png" alt="twitter logo">
       </a>
       <a href="https://www.linkedin.com">
-        <img src="/MasterD-Website-Project-1/Images/linkedin_logo.png" alt="linkedin logo" />
+        <img src="/MasterD-Website-Project-1/Images/linkedin_logo.png" alt="linkedin logo">
       </a>
       </div>
-      <! -- Logo -->
+      <!--Logo-->
       <div class="footerlogo">
       <a href="/MasterD-Website-Project-1/index.html"></a>
-      <img src="/MasterD-Website-Project-1/Images/urban_lifestyle_logo.png" alt="company logo" />
+      <img src="/MasterD-Website-Project-1/Images/urban_lifestyle_logo.png" alt="company logo">
       </div>
   </body>
 </html>
