--- a/HTML/quote.html
+++ b/HTML/quote.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" , initial-scale="1.0" />
-    <link rel="stylesheet" href="../CSS/styles.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../CSS/styles.css">
     <title>Urban Lifestyle</title>
   </head>
   <body>
-    <! -- Header -->
+    <!--Header-->
     <header>
-      <! -- Navigation Menu -->
+      <!--Navigation Menu-->
       <div class="navigation">
         <a href="/MasterD-Website-Project-1/index.html">Home</a>
         <a href="/MasterD-Website-Project-1/HTML/contact.html">Contact</a>
@@ -24,9 +24,7 @@
         <h1>Urban Lifestyle</h1>
         <h3><em>Premium Clothes</em></h3>
       </div>
-      <! -- Quote page -->
-
-      <! -- Data entry -->
+      <!--Data entry-->
       <form>
         <label for="fullname">Full name:</label>
         <input type="text" id="fullname" name="fullname"><br>
@@ -41,18 +39,17 @@
         <button type="submit">Submit</button><br>
 
       </form>
-      <! -- Privacy Policy -->
+      <!--Privacy Policy-->
       <br><p>Your privacy is important to us. Any information provided through our form, such as your name, email address, or other details, will only be used to process your request and provide you with an accurate quote. We will not share your information with third parties without your consent. All data is handled securely and in compliance with applicable privacy regulations. If you have any questions or concerns about how your information is used, feel free to contact us.</p>
-      <! -- Checkbox -->
     </main>
 
-    <! -- Footer -->
+    <!--Footer-->
       <div class="footer">
       <! -- Adress and legal notice -->
       <p>Calle de Prim 6, 28004 Madrid, España</p>
       <p>&#169; 2025 Urban Lifestyle Clothes. All rights reserved</p>
       </div>
-       <! -- Social Networks -->
+       <!--Social Networks-->
       <div class="social">
         <a href="https://www.facebook.com">
         <img src="/MasterD-Website-Project-1/Images/facebook_logo.png" alt="facebook logo" />
@@ -64,12 +61,10 @@
         <img src="/MasterD-Website-Project-1/Images/linkedin_logo.png" alt="linkedin logo" />
       </a>
       </div>
-      <! -- Logo -->
+      <!--Logo-->
       <div class="footerlogo">
       <a href="/MasterD-Website-Project-1/index.html"></a>
       <img src="/MasterD-Website-Project-1/Images/urban_lifestyle_logo.png" alt="company logo" />
-      </a>
       </div>
-    </footer>
   </body>
 </html>
