change html file names

--- a/HTML/presupuesto.html
+++ b/HTML/presupuesto.html
@@ -11,11 +11,11 @@
     <header>
       <!--Navigation Menu-->
       <div class="navigation">
-        <a href="/MasterD-Website-Project-1/index.html">Inicio</a>
-        <a href="/MasterD-Website-Project-1/HTML/contacto.html">Contacto</a>
+        <a href="/MasterD-Website-Project-1/index.html">Home</a>
+        <a href="/MasterD-Website-Project-1/HTML/contact.html">Contact</a>
         <a href="/MasterD-Website-Project-1/HTML/portfolio.html">Portfolio</a>
-        <a class="active" href="/MasterD-Website-Project-1/HTML/presupuesto.html"
-          >Presupuesto</a
+        <a class="active" href="/MasterD-Website-Project-1/HTML/quote.html"
+          >Quote</a
         >
       </div>
     </header>
