--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <header>
       <!--Navigation Menu-->
       <div class="navigation">
-        <a class="active" href="/MasterD-Website-Project-1/index.html">Home</a>
-        <a href="/MasterD-Website-Project-1/HTML/contact.html">Contact</a>
+        <a class="active" href="/MasterD-Website-Project-1/index.html">Inicio</a>
+        <a href="/MasterD-Website-Project-1/HTML/contacto.html">Contacto</a>
         <a href="/MasterD-Website-Project-1/HTML/portfolio.html">Portfolio</a>
-        <a href="/MasterD-Website-Project-1/HTML/quote.html">Quote</a>
+        <a href="/MasterD-Website-Project-1/HTML/presupuesto.html">Presupuesto</a>
       </div>
     </header>
     <main class="main">
@@ -40,7 +40,7 @@
         reach out to us directly via email or phone. Let us create something
         amazing together.
       </p>
-      <a href="HTML/contact.html" class="button">Contact us</a>
+      <a href="HTML/contacto.html" class="button">Contact us</a>
 
       <!--Portfolio block-->
       <div class="categorypicture">
@@ -66,7 +66,7 @@
         out the form with your details, and we will get back to you promptly to
         discuss the next steps.
       </p>
-      <a href="/MasterD-Website-Project-1/HTML/quote.html" class="button"
+      <a href="/MasterD-Website-Project-1/HTML/presupuesto.html" class="button"
         >Get a quote</a
       >
     </main>
